camunda-example-exception-handler/src/main/kotlin/br/com/camunda/example/exception/handler/error/ErrorCode.kt
package br.com.camunda.example.exception.handler.error

open class ErrorCode(val code: String, val key: String)